--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": false,
   "version": "0.1.0",
   "description": "A lightweight ethereum block explorer",
-  "repository": "https://github.com/etherparty/explorer",
+  "repository": "https://github.com/tendermint/ethermint-explorer",
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.3.1",
