--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "description": "A lightweight ethereum block explorer",
   "repository": "https://github.com/tendermint/ethermint-explorer",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "bower": "^1.3.1",
-    "http-server": "^0.6.1",
+    "http-server": "^0.6.1"
+  },
+  "devDependencies": {
     "jasmine-core": "^2.3.4",
     "karma": "~0.12",
     "karma-chrome-launcher": "^0.1.12",
